<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.AboutAppActivity">

    <RelativeLayout
        android:id="@+id/wave_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-80dp"
        android:background="@drawable/img_wave_bg" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:title="About App"
        app:titleTextColor="@color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/sans_bold_custom"
        android:text="@string/app_name"
        android:textAllCaps="true"
        style="@style/parent_text_style"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/wave_background_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-80dp"
        android:background="@drawable/img_wave_bg"
        android:rotation="180"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_marginBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.cardview.widget.CardView
                style="@style/cardview_background_style"
                android:id="@+id/cardview_appDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginStart="@dimen/cardview_side"
                android:layout_marginEnd="@dimen/cardview_side"
                app:cardCornerRadius="@dimen/cardview_radius"
                >

                <TextView
                    style="@style/sub_text_style"
                    android:id="@+id/appDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="textStart"
                    android:text="Loading Data..."
                    android:textSize="15dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_appDesc"
                android:elevation="6dp"
                style="@style/cardview_background_style"
                app:cardCornerRadius="@dimen/cardview_radius"
                android:layout_marginRight="@dimen/cardview_side"
                android:layout_marginLeft="@dimen/cardview_side"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    >

                    <TextView
                        style="@style/sub_text_style"
                        android:id="@+id/terms_conditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/terms_amp_conditions"
                        android:textSize="15dp" />

                    <TextView
                        style="@style/sub_text_style"
                        android:id="@+id/privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/privacy_and_policy"
                        android:textSize="15dp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </ScrollView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sans_medium_custom"
        android:text="@string/app_version"
        android:textColor="@color/white" />


</RelativeLayout>