<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/page_background_style"
    tools:context=".Activities.DeveloperActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/img_developer_cover"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_period="1000"
                app:iss_placeholder="@drawable/ic_placeholder"
                app:iss_selected_dot="@drawable/default_selected_dot" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:visibility="invisible"
                android:background="@drawable/other_developer_cover_bg" />

            <androidx.cardview.widget.CardView
                android:id="@+id/img_developer"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="175dp"
                android:elevation="5dp"
                app:cardCornerRadius="45dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_developer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:elevation="1dp"
                android:fontFamily="@font/sans_bold_custom"
                android:letterSpacing="0.01"
                android:text="@string/ashish_dangi"
                style="@style/parent_text_style"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/info_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_developer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sans_thin_custom"
                android:letterSpacing="0.05"
                android:text="An Android Developer"
                style="@style/sub_text_style"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                style="@style/cardview_background_style"
                android:id="@+id/cardview_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_developer"
                android:layout_margin="30dp"
                app:cardCornerRadius="@dimen/cardview_radius">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:id="@+id/email_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_48px_email" />

                        <TextView
                            android:id="@+id/ashishemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_medium_custom"
                            android:letterSpacing="0.05"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/developer_email"
                            style="@style/shayari_text_style"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/website_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/email_developer"
                        android:layout_margin="10dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_48px_web" />

                        <TextView
                            android:id="@+id/ashishwebsite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_medium_custom"
                            android:letterSpacing="0.05"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/website_developer"
                            style="@style/shayari_text_style"
                            android:textSize="15dp" />

                        <ImageView
                            android:id="@+id/img_comingsoon"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:paddingLeft="0dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/facebook_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/website_developer"
                        android:layout_margin="10dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_48px_fb" />

                        <TextView
                            android:id="@+id/ashishfacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_medium_custom"
                            android:letterSpacing="0.05"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/facebook_developer"
                            style="@style/shayari_text_style"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/twitter_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/facebook_developer"
                        android:layout_margin="10dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_48px_twitter" />

                        <TextView
                            android:id="@+id/ashishtwitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_medium_custom"
                            android:letterSpacing="0.05"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/twitter_developer"
                            style="@style/shayari_text_style"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/location_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/twitter_developer"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="start|center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_48px_location" />

                        <TextView
                            android:id="@+id/ashishlocation"
                            style="@style/shayari_text_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_medium_custom"
                            android:letterSpacing="0.05"
                            android:onClick="onClick"
                            android:paddingLeft="10dp"
                            android:text="@string/location_developer"
                            android:textSize="15dp" />
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:scrollbarStyle="outsideOverlay"
         />


</RelativeLayout>